# kCloud

./: README.md  常用代码模板.md  数学工具书.md
Module/: 常用代码模板.md
Notes/: 计算机视觉学习笔记.md
Othernotes/: 书签整理.md
Ubuntu_v2ray_install/: README.md
controller/dvins_core/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
controller/dvins_core/config/: real.xml  tags.yaml  uam.xml
controller/dvins_core/include/dvins_core/: arm_plugin.h  common.h  common_hitsz.h  control_common.h  conversions.h  conversions_hitsz.h  default_topics_hitsz.h  eigen_mav_msgs_hitsz.h  gazebo_cable_plugin.h  lee_payload_position_controller.h  lee_payload_position_controller_node.h  lpc.h  lpcn.h  parameters_hitsz.h  parameters_ros.h  parameters_ros_hitsz.h
controller/dvins_core/launch/: compare.launch  continuous_detection.launch  control.launch  corriworld.launch  hm.launch  hummingbird.launch  openvins.launch  otheruav.launch  spawn_mav.launch  spawn_payload.launch  tag.launch  uav.launch  v.launch  z_detection.launch
controller/dvins_core/msg/: ArucoDetection.msg  ArucoDetectionArray.msg  ArucoDetectionInImage.msg  ArucoDetectionInImageArray.msg  CommandArmServoAngle.msg  CommandArmServoAngleTrajectory.msg  CommandMavAndGripper.msg  PoseEuler.msg
controller/dvins_core/resource/: lee_controller_firefly.yaml
controller/dvins_core/src/: adap_estimator.cpp  arm_plugin.cpp  aruco_detector.cpp  dvins_estimator.cpp  dvins_estimator1.cpp  dvins_estimator2.cpp  gazebo_cable_plugin.cpp  hover_loop.cpp  hovering_example copy.cpp  hovering_example.cpp  kf_at.py  lee_payload_position_controller.cpp  lee_payload_position_controller_node.cpp  lee_position_controller.cpp  lee_position_controller.h  lee_position_controller_node.cpp  lee_position_controller_node.h  lpc.cpp  lpcn.cpp  sw1.cpp  switch_node.cpp  trajectory_publisher_rectangle.cpp  zero.py
controller/dvins_core/urdf/: arm.xacro  cable.xacro  component_snippets.xacro  component_snippets_0.xacro  component_snippets_hitsz.xacro  firefly.xacro  firefly_base.xacro  firefly_generic_odometry_mavcablepayload.gazebo  firefly_generic_odometry_mavcablepayload_camera.gazebo  firefly_generic_odometry_mavcablepayload_camera_ori.gazebo  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro  payload.xacro  vi_sensor_base.xacro
controller/dvins_core/worlds/: compare.world  corri.world  corritags.world  f.world  home0.world  home1.world  home3.world  home4.world  rectangle_tag.world  t.world  tagtagtag.world  wtf.world
